# robot-automation-testing

./: README.md
robot_automation_testing/: Makefile  README.md  pyproject.toml
robot_automation_testing/reports/: log.html  output.xml  report.html
robot_automation_testing/src/test_suites/campaignist/resources/: campaignist_keywords.resource
robot_automation_testing/src/test_suites/campaignist/tests/: campaignist_blog_test.robot
robot_automation_testing/src/test_suites/graphql/data/: graphql_test_data.json
robot_automation_testing/src/test_suites/graphql/tests/: hello_test.robot
sample-graphql-api/: .gitignore  Makefile  README.md  app.py  pyproject.toml
