[tool.poetry]
name = "robot-automation-testing"
version = "0.1.0"
description = "Automated Testing with Robot Framework"
authors = ["Quan Vu"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
robotframework = "6.1.1"
robotframework-seleniumlibrary = "6.3.0"
selenium = "^4.11.2"
robotframework-requests = "^0.9.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
