[tool.poetry]
name = "sample-graphql-api"
version = "0.1.0"
description = ""
authors = ["Quan Vu"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
graphene = "^3.4.3"
flask = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
